--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
-  "name": "react-tutorial",
+  "name": "react-tic-tac-toe",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Denisse-AB.github.io/react-tic-tac-toe",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
